Bugfix: dropdown z-index, and scroll to anno.

--- a/docs/0.3.0/pages/viewer.css
+++ b/docs/0.3.0/pages/viewer.css
@@ -215,8 +215,8 @@ html {
 
 body {
   height: 100%;
-  background-color: #404040;
-  background-image: url(images/texture.png);
+  /*background-color: #404040;*/
+  /*background-image: url(images/texture.png);*/
 }
 
 body,
